--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
   <body>
     <div id="root"></div>
   </body>
+  <script
+    crossorigin
+    src="https://unpkg.com/react@18/umd/react.development.js"
+  ></script>
+  <script
+    crossorigin
+    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+  ></script>
   <script>
-    const heading = document.createElement("h1");
-    heading.innerHTML = "Hello World by JS!";
-
-    const root = document.getElementById("root");
-    root.appendChild(heading);
+    function Time(props) {
+      return React.createElement("h1", {}, "Good", props.name);
+    }
+    const element = React.createElement(Time, { name: "afternoon" });
+    const root = ReactDOM.createRoot(document.getElementById("root"));
+    root.render(element);
+    root.render(Time({ name: "afternoon" }));
   </script>
 </html>
