done with day 1 changes in root html and react

--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Hii monu is here</h1>
+    </div>
+    <script src="./App.js"></script>
   </body>
-  <script
-    crossorigin
-    src="https://unpkg.com/react@18/umd/react.development.js"
-  ></script>
-  <script
-    crossorigin
-    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-  ></script>
-  <script>
-    function Time(props) {
-      return React.createElement("h1", {}, "Good", props.name);
-    }
-    const element = React.createElement(Time, { name: "afternoon" });
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(element);
-    root.render(Time({ name: "afternoon" }));
-  </script>
 </html>
